differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr52177.c-4.8.2-0.out.txt
pr52177.c: In function ‘bar’:
pr52177.c:16:36: error: non-constant argument 1 to __atomic_always_lock_free
   return __atomic_always_lock_free (foo (), s);
                                    ^
